# amhello

./: Makefile.am  README.md  configure.ac
po/: pt_BR.po
src/: Makefile.am  main.c
